@startuml write_factory_design
' Library dependencies
package "OSAL Abstractions" {
  class Unistd
  class Fcntl
  class Stat
  class Mman
  class Stdlib
}

package "log::detail" {
  class WriterFactory {
    +Create(ring_buffer_size, dynamic_mode, app_id)
    +GetIdentifier()
    +GetFileName()
    --
    -OpenAndTruncateFile(buffer_total_size, file_name, flags)
    -MapSharedMemory(buffer_total_size, memfd_write, file_name)
    -GetAlignedRingBufferAddress(total_size, file_name, file_open_flags)
    -IsMemoryAligned(ring_buffer_address)
    -ConstructSharedData(ring_buffer_address, ring_buffer_size)
    -UnlinkExistingFile(file_name)
    -PrepareFileNameAndUpdateOpenFlags(file_open_flags, dynamic_mode, app_id)
    -GetStaticLoggingClientFilename(app_id)
  }

  class SharedMemoryWriter
  class SharedData
}

' Main relationships
WriterFactory --> SharedMemoryWriter : creates

class Mman {
  +mmap(addr, length, prot, flags, fd, offset)
  +munmap(addr, length)
}


WriterFactory --> SharedData : initializes
WriterFactory --> Unistd : uses
WriterFactory --> Fcntl : uses
WriterFactory --> Stat : uses
WriterFactory --> Mman : uses mmap(), munmap()
WriterFactory --> Stdlib : uses

' Notes on memory allocation and deallocation
note right of WriterFactory::MapSharedMemory
  Memory is allocated using Mman::mmap(), which maps a file into a shared memory region.
  The size of the region is determined by the buffer_total_size parameter.
  The mapped memory is used as a ring buffer for logging.
  An unmap callback is set up to ensure memory is released when no longer needed.
end note

note top of WriterFactory
  WriterFactory:
  - Creates and manages a shared memory ring buffer for logging.
  - Allocates memory using mmap (via Mman), ensures cleanup with munmap.
  - Handles file creation, naming, permissions, and instantiates SharedMemoryWriter.
end note

note bottom of Mman
  Mman abstracts POSIX memory management for safety and portability.
  - mmap(addr, length, prot, flags, fd, offset): Maps files/devices into memory.
  - munmap(addr, length): Releases mapped memory, preventing leaks.
  All error codes are propagated to the caller for robust error handling.
end note

SharedMemoryWriter --> SharedData : owns
@enduml
